objects/Category__c.object
<CustomObject>
    <description>Categories</description>
    <fields>
        <fullName>Baseline_Savings__c</fullName>
        <description>Baseline Savings</description>
        <inlineHelpText>Baseline Savings</inlineHelpText>
        <label>Baseline Savings</label>
        <summarizedField>SubCategory__c.Realized_Savings__c</summarizedField>
        <summaryForeignKey>SubCategory__c.Category__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Baseline_Spent__c</fullName>
        <description>Baseline Spent</description>
        <inlineHelpText>Baseline Spent</inlineHelpText>
        <label>Baseline Spent</label>
        <summarizedField>SubCategory__c.Realized_Spent__c</summarizedField>
        <summaryForeignKey>SubCategory__c.Category__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Category_No__c</fullName>
        <description>Category Number</description>
        <displayFormat>CAT-{000000}</displayFormat>
        <inlineHelpText>Category Number</inlineHelpText>
        <label>Category No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Forecast_Savings__c</fullName>
        <description>Forecast Savings</description>
        <inlineHelpText>Forecast Savings</inlineHelpText>
        <label>Forecast Savings</label>
        <summarizedField>SubCategory__c.Forecast_Savings__c</summarizedField>
        <summaryForeignKey>SubCategory__c.Category__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Forecast_Spent__c</fullName>
        <description>Forecast Spent</description>
        <inlineHelpText>Forecast Spent</inlineHelpText>
        <label>Forecast Spent</label>
        <summarizedField>SubCategory__c.Forecast_Spent__c</summarizedField>
        <summaryForeignKey>SubCategory__c.Category__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Resource</description>
        <inlineHelpText>Resource</inlineHelpText>
        <label>Resource</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Categories</relationshipLabel>
        <relationshipName>Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Category_No__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>